--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "osm_models"
-version = "0.8.0"
+version = "0.9.0"
 authors = ["Jason Abbott <you@example.com>"]
 edition = "2018"
 license = "MIT"
@@ -10,3 +10,5 @@ readme = "README.md"
 
 [dependencies]
 hashbrown = "0.7"
+serde = { version = "1.0", features = ["derive"] }
+serde-xml-rs = "0.4"
